Added external package types to markdown docs as well

--- a/v2/pkg/js/generator/templates/markdown_class.tmpl
+++ b/v2/pkg/js/generator/templates/markdown_class.tmpl
@@ -44,7 +44,7 @@ to be used from nuclei scanner.
 | Name | Type | 
 |--------|-------------|
 {{- range $fieldName, $field := $methods.Fields }}
-| `{{$fieldName}}` | {{ $field }} |
+| {{$fieldName}} | `{{ $field }}` |
 {{- end }}
 {{- end }}
 {{- end }}
