update prompt in doclint

--- a/v2/pkg/js/modules/generator/templates/js_class.tmpl
+++ b/v2/pkg/js/modules/generator/templates/js_class.tmpl
@@ -1,4 +1,5 @@
-{{$packageName:=(printf "lib%s" .PackageName) -}}
+{{$packageName:=(printf "%s" .PackageName) -}}
+/**@module {{$packageName}} */
 // {{$packageName}} implements bindings for {{.PackageName}} protocol in javascript
 // to be used from nuclei scanner.
 
