--- a/pkg/js/devtools/tsdocs/cmd/tsdocs/tsmodule.go.tmpl
+++ b/pkg/js/devtools/tsdocs/cmd/tsdocs/tsmodule.go.tmpl
@@ -42,28 +42,24 @@ export function {{ .Name }}({{ range $index, $element := .Function.Parameters }}
     {{ .Function.ReturnStmt }}
 }
 
-{{ else if eq .Type "object" -}}
+{{ else if eq .Type "interface" -}}
 /**
 {{- range (splitLines .Description) }}
  * {{ . }}
 {{- end }}
  */
-export const {{ .Name }}: {
-    {{"\n"}}
+export interface {{ .Name }} {
     {{- range $property := .Object.Properties }}
+    {{ if .Description }}
     /**
     {{- range (splitLines .Description) }}
     * {{ . }}
     {{- end }}
     */
-    {{ $property.Name }}: {{ $property.Type }},
-    {{"\n"}}    
+    {{ end }}
+    {{ $property.Name }}?: {{ $property.Type }},
     {{- end }}
-} = {
-    {{- range $property := .Object.Properties }}
-    {{ $property.Name }}: null, // TODO: Define default value
-    {{- end }}
-};
+}
 
 {{ end }}
 {{- end }}
