fix ikev and related bugs

--- a/pkg/js/devtools/tsdocs/cmd/tsdocs/tsmodule.go.tmpl
+++ b/pkg/js/devtools/tsdocs/cmd/tsdocs/tsmodule.go.tmpl
@@ -8,11 +8,13 @@
 export class {{ .Name }} {
     {{"\n"}}
     {{- range $property := .Class.Properties }}
+    {{ if .Description }}
     /**
     {{- range (splitLines $property.Description) }}
     * {{ . }}
     {{- end }}
     */
+    {{ end }}
     public {{ $property.Name }}: {{ $property.Type }};
     {{"\n"}}
     {{- end }}
